<resources>
    <string name="app_name">TS</string>

    <string name="week_mode">Show in week</string>
    <string name="activity_title_view">Calendar View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is search fragment</string>
    <string name="pick_time">Pick</string>
    <string name="reservation_detail">Reservation Detail</string>
    <string name="user_profile">user_profile</string>
    <string name="full_name">Alice Johnson</string>
    <string name="nickname">Murphy</string>
    <string name="res_des">Description</string>
    <string name="sport_hint">Input your award!</string>
    <string name="ownRev">Review</string>
    <string name="res_date">Date</string>
    <string name="_default">Default</string>
    <string name="empty_state">You don\'t have any finished reservation yet.</string>

    <string name="email">s300570@studenti.polito.it</string>
    <string name="phone">+39 173458888</string>
    <string name="job">Full stack Developer</string>

<string name = "review_hint">Oops! It seems you haven\'t left your review yet. Please share your experience !</string>
    <string name="new_user">New User</string>

    <string name="text_email">Email</string>
    <string name="text_tel">Tel</string>
    <string name="text_password">Password</string>
    <string name="text_name">First name</string>
    <string name="text_surname">Last name</string>
    <string name="helper_text">At least 6 numbers</string>
    <string name="helper_email">Please input a valid email, we will send a verification message.</string>
    <string name="Registration">Let\'s start the journey!</string>

        <!--    tool bar titles-->
    <string name="addRes">New reservation</string>
    <string name="review_detail">Review Detail</string>
    <string name="sport_detail">Sport Detail</string>
    <string name="profile">Profile</string>
    <string name="court_detail_title">Court Ranking</string>
    <string name="main_page">Main Page</string>
    <string name="history_title">My History</string>
    <string name="signup">Sign Up</string>
    <string name="contact">Friends</string>

</resources>