<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

<!--    <EditText-->
<!--        android:id="@+id/nothing"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Email" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextEmail"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="" />-->

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Registration"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4">

</TextView>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_name"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_surname"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="@string/text_email"
        app:endIconMode="clear_text"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


<!--    <EditText-->
<!--        android:id="@+id/editTextPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="textPassword"-->
<!--        android:hint="Password" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextName"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Name" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTextSurname"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Surname" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTel"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="TelephoneNumber" />-->

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_tel"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="Register"
        android:textAppearance="?attr/textAppearanceButton"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_sports"
        android:layout_gravity="center_horizontal"
        />

<!--    <Button-->
<!--        android:id="@+id/buttonSave"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Back to main " />-->

</LinearLayout>
