<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deeper_toolbar_color2"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activityToolbar"
            android:layout_width="match_parent"
            app:title="@string/profile"
            android:layout_height="?attr/actionBarSize"
            />
    </com.google.android.material.appbar.AppBarLayout>
<!--<ScrollView-->

<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:background="@color/white"-->
<!--    tools:context=".ProfileFragment">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Spinner
            android:id="@+id/userSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="30dp"
            app:layout_constraintTop_toBottomOf="@id/TOP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <LinearLayout
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/TOP"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="#DCDCDC"
                android:contentDescription="@string/user_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_profile" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!--            name-->
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/full_name"
                android:textColor="#000000"
                android:textSize="45sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--            phone-->
            <LinearLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="phone"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/phone"
                    android:textSize="30sp" />

            </LinearLayout>
<!--            sport-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/mySport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="My sports:"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"/>

                    <!--            button-->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:nestedScrollingEnabled="false"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mySport" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerViewS"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        >
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btE"
                            android:layout_width="150dp"
                            android:layout_height="48dp"
                            android:text="Edit"
                            android:textColor="@android:color/white"
                            android:background="@drawable/custom_sports"
                            android:textAppearance="?attr/textAppearanceButton"
                            android:layout_marginRight="5dp"
                            />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btHis"
                            android:layout_width="150dp"
                            android:layout_height="48dp"
                            android:text="History"
                            android:textColor="@android:color/white"
                            android:background="@drawable/custom_sports"
                            android:layout_marginLeft="5dp"

                            />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>





        </LinearLayout>

    </LinearLayout>

<!--</ScrollView>-->
</LinearLayout>