<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deeper_toolbar_color2"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activityToolbar"
            android:layout_width="match_parent"
            app:title="@string/profile"
            android:layout_height="?attr/actionBarSize"
            />
    </com.google.android.material.appbar.AppBarLayout>

<!--<ScrollView-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/white"-->

<!--    tools:context=".EditProfileFragment">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewE"
                android:layout_width="182dp"
                android:layout_height="218dp"
                android:background="#DCDCDC"
                android:contentDescription="@string/user_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_profile"
                app:shapeAppearanceOverlay="@style/RoundCorner"/>
<!--            <com.google.android.material.imageview.ShapeableImageView-->
<!--                android:id="@+id/imageViewE"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="200dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:scaleType="centerCrop"-->
<!--                -->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/user_profile"-->
<!--                app:shapeAppearanceOverlay="@style/RoundCorner"/>-->
            <ImageButton
                android:id="@+id/imgbtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/img_btn_border"
                android:contentDescription="camera"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <!--下半部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">
            <!--                name-->
            <LinearLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name"
                    android:textColor="#000000"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:selectAllOnFocus="true"
                    android:inputType="textPersonName"
                    android:hint="Name"
                    android:text="@string/full_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            </LinearLayout>

            <!--            surname-->
            <LinearLayout
                android:id="@+id/layoutNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Surname"
                    android:textColor="#000000"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
                <EditText
                    android:id="@+id/ed_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:selectAllOnFocus="true"
                    android:inputType="textPersonName"
                    android:hint="Surname"
                    android:text="@string/nickname"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            </LinearLayout>

            <!--                phone-->
            <LinearLayout
                android:id="@+id/linearLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:contentDescription="phone"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:hint="phone"
                    android:inputType="phone"

                    android:selectAllOnFocus="true"
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            </LinearLayout>
            <!--            Interested Sports-->
            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="SKILL:"
                android:textColor="#000000"
                android:textSize="40sp" />
            <LinearLayout
                android:id="@+id/selectiveSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--                运动-->
                <android.widget.Button

                    android:id="@+id/btrunning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@color/lighter_toolbar_color"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="running" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bttennis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="tennis"
                    android:layout_marginTop="10dp"
                    android:background="@color/lighter_toolbar_color"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btpingpong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="10dp"
                    android:background="@color/lighter_toolbar_color"
                    android:text="pingpong"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btswimming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="10dp"
                    android:text="swimming"
                    android:background="@color/lighter_toolbar_color"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btbasketball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="basketball"
                    android:background="@color/lighter_toolbar_color"
                    />

            </LinearLayout>

            <!--           save/cancel button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                >
                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btS"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="Save"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_sports"
                    android:layout_marginRight="5dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btC"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_sports"
                    android:text="Cancel"
                    android:layout_marginLeft="5dp"

                    />
            </LinearLayout>



        </LinearLayout>
</ScrollView>


    </LinearLayout>

<!--</ScrollView>-->
</LinearLayout>